sort crumb spacing, v buggy

--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -19,7 +19,7 @@
     display: inline-block;
 
     + li:before {
-      padding: 0 5px;
+      padding: 0 0 0 5px;
       color: @breadcrumb-color;
       content: "@{breadcrumb-separator}\00a0"; // Unicode space added since inline-block means non-collapsing white-space
     }
